Fix: prevent overflow of display using flexbox

--- a/styles.css
+++ b/styles.css
@@ -35,12 +35,14 @@ body {
 }
 
 .display {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     font-family: "Courier New", "Monaco", "Consolas", monospace;
     width: 80%;
     height: 50%;
     background-color: var(--secondary-color);
     border-radius: 8px;
-    text-align: right;
     font-size: 4.5rem;
     color: #333333c9;
     font-weight: bold;
